# spryx-di

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  zensical.toml
.claude/commands/: commit.md  deslop.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  contributing.md  index.md
docs/api/: container.md  errors.md  fastapi.md  module.md  provider.md  testing.md
docs/concepts/: auto-wiring.md  boundaries.md  container.md  lifecycle.md  modules.md  providers.md  scopes.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: circular-deps.md  migration.md  modular-monolith.md  testing.md
docs/integrations/: fastapi.md
examples/event_bus/app/: main.py
examples/event_bus/modules/billing/: handlers.py  module.py
examples/event_bus/modules/notifications/: handlers.py  module.py
examples/event_bus/modules/orders/: adapters.py  events.py  handlers.py  module.py  ports.py
examples/modular_monolith/: README.md
examples/modular_monolith/api/: main.py  routes.py  settings.py
examples/modular_monolith/modules/catalog/: adapters.py  domain.py  handlers.py  module.py  ports.py
examples/modular_monolith/modules/identity/: adapters.py  domain.py  module.py  ports.py
examples/modular_monolith/modules/orders/: adapters.py  domain.py  handlers.py  module.py  ports.py
examples/standalone/: README.md
examples/standalone/app/: main.py
examples/standalone/modules/identity/: adapters.py  module.py  ports.py
examples/standalone/modules/notifications/: adapters.py  module.py  ports.py
examples/standalone/modules/orders/: adapters.py  handlers.py  module.py  ports.py
openspec/changes/add-docs/: design.md  proposal.md  tasks.md
openspec/changes/add-docs/specs/docs-content/: spec.md
openspec/changes/add-docs/specs/docs-setup/: spec.md
openspec/changes/archive/2026-04-04-spryx-di-library/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-04-spryx-di-library/specs/container-core/: spec.md
openspec/changes/archive/2026-04-04-spryx-di-library/specs/scoped-container/: spec.md
openspec/changes/archive/2026-04-04-spryx-di-library/specs/testing-utilities/: spec.md
openspec/changes/typed-event-bus/: design.md  proposal.md  tasks.md
openspec/changes/typed-event-bus/specs/async-event-backend/: spec.md
openspec/changes/typed-event-bus/specs/event-boot-validation/: spec.md
openspec/changes/typed-event-bus/specs/event-bus/: spec.md
openspec/changes/typed-event-bus/specs/event-handler/: spec.md
openspec/changes/typed-event-bus/specs/event-listener/: spec.md
openspec/changes/typed-event-bus/specs/module-system/: spec.md
openspec/specs/auto-wiring/: spec.md
openspec/specs/fastapi-integration/: spec.md
openspec/specs/module-system/: spec.md
openspec/specs/settings-integration/: spec.md
spryx_di/: __init__.py  analysis.py  cli.py  container.py  errors.py  module.py  provider.py
spryx_di/events/: __init__.py  backend.py  bus.py  handler.py  listener.py  serialization.py
spryx_di/events/backends/: celery.py  memory.py
spryx_di/ext/: fastapi.py  settings.py
spryx_di/testing/: __init__.py  override.py
tests/: conftest.py
tests/integration/: test_fastapi_integration.py
tests/unit/: test_analysis.py  test_autowiring_fixes.py  test_container.py  test_events.py  test_module.py  test_resolution.py  test_scoping.py  test_settings.py  test_testing.py
